manifests/monitoring/origin_cluster/modelmesh-prometheus.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rhods-model-monitoring
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: serving-prometheus-proxy-tls
    argocd.argoproj.io/sync-wave: "2"
  labels:
    prometheus: rhods-model-monitoring
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    prometheus: rhods-model-monitoring

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
   argocd.argoproj.io/sync-wave: "2"
  name: rhods-model-monitoring
  labels:
    prometheus: rhods-model-monitoring
spec:
  to:
    kind: Service
    name: rhods-model-monitoring
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
